# oracle-pallet

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: autodeploy.yaml  check.yml
dia-batching-server/: Cargo.toml
dia-batching-server/src/: args.rs  handlers.rs  main.rs  price_updater.rs  storage.rs  types.rs
dia-batching-server/src/api/: binance.rs  coingecko.rs  custom.rs  error.rs  mod.rs  polygon.rs
dia-batching-server/src/api/custom/: ampe.rs  arsb.rs  brl.rs  mod.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/dia-oracle/: Cargo.toml
pallets/dia-oracle/rpc/: Cargo.toml
pallets/dia-oracle/rpc/runtime-api/: Cargo.toml
pallets/dia-oracle/rpc/runtime-api/src/: lib.rs
pallets/dia-oracle/rpc/src/: lib.rs
pallets/dia-oracle/src/: benchmarking.rs  dia.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
