[package]
name = 'dia-oracle'
version = '0.1.0'
description = 'DIA Oracle pallet'
edition = '2018'
publish = false

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
optional = true
branch = "release-polkadot-v1.6.0"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"

[dependencies.log]
default-features = false
version = "0.4.20"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.11.3'

[dependencies.serde]
version = '1.0.195'
default-features = false
features = ['derive']

[dependencies.serde_json]
version = '1.0.111'
default-features = false
features = ['alloc']

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"


[features]
default = [ 'std' ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	'codec/std',
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'scale-info/std',
	"serde/std",
	"serde_json/std",
	"sp-core/std",
	"sp-io/std",
	'sp-runtime/std',
	"sp-std/std",
]
try-runtime = [
	'frame-support/try-runtime',
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
