[package]
name = "dia-oracle-runtime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
dia-oracle = { version = "0.1.0", default-features = false, path = "../../../dia-oracle" }

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/polkadot-sdk.git'
branch = "release-polkadot-v1.6.0"

[features]
default = [ "std" ]
std = [
	"dia-oracle/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"dia-oracle/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
